Atualização dos ícones da ajuda

--- a/UnBBayes/help/html/aprendizagem.htm
+++ b/UnBBayes/help/html/aprendizagem.htm
@@ -7,7 +7,7 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para abrir o m&oacute;dulo de <b><font color="#FF0000">aprendizagem</font></b>, 
 basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> que possui este 
-<b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icones/APRENDE.GIF" width="16" height="16"> 
+<b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icons/learn.gif" width="16" height="16"> 
 .
 <p>A aprendizagem de uma <strong><font color="#FF0000">rede bayseana</font> </strong>é
 feita a partir de um banco de casos. O banco de</p>
