--- a/UnBBayes/help/html/compilarrede.htm
+++ b/UnBBayes/help/html/compilarrede.htm
@@ -7,6 +7,6 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para <b><font color="#FF0000">compilar</font></b> a atual Rede Bayesiana que est&aacute; 
 sendo editada, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-que possui este <font color="#FF0000"><b>&iacute;cone </b></font> <img src="../../icones/COMPILA.GIF" width="17" height="19">. 
+que possui este <font color="#FF0000"><b>&iacute;cone </b></font> <img src="../../icons/compile.gif" width="17" height="19">. 
 </body>
 </html>
