--- a/UnBBayes/help/html/jhelp.htm
+++ b/UnBBayes/help/html/jhelp.htm
@@ -97,8 +97,6 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;?xml version=&quot;1.0&quot;?&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;map&gt;</p>
 <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;junbbayes&quot; url=&quot;../icones/junbbayes.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
   target=&quot;introducao&quot; url=&quot;./html/introducao.htm&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
   target=&quot;controles&quot; url=&quot;./html/controles.htm&quot; /&gt;<br>
@@ -181,82 +179,60 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
   target=&quot;doc&quot; url=&quot;./documentacao/index.html&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;idoc&quot; url=&quot;../icones/docu.gif&quot; /&gt;<br>
+  target=&quot;iaprendizagem&quot; url=&quot;../icons/learn.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iaprendizagem&quot; url=&quot;../icones/aprende.gif&quot; /&gt;<br>
+  target=&quot;imais&quot; url=&quot;../icons/more.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;imais&quot; url=&quot;../icones/mais.gif&quot; /&gt;<br>
+  target=&quot;imenos&quot; url=&quot;../icons/less.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;imenos&quot; url=&quot;../icones/menos.gif&quot; /&gt;<br>
+  target=&quot;inovo&quot; url=&quot;../icons/new.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;inovo&quot; url=&quot;../icones/novo.gif&quot; /&gt;<br>
+  target=&quot;iabrir&quot; url=&quot;../icons/open.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iabrir&quot; url=&quot;../icones/abrir.gif&quot; /&gt;<br>
+  target=&quot;isalvar&quot; url=&quot;../icons/save.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;isalvar&quot; url=&quot;../icones/salvar.gif&quot; /&gt;<br>
+  target=&quot;icompilar&quot; url=&quot;../icons/compile.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;icompilar&quot; url=&quot;../icones/compila.gif&quot; /&gt;<br>
+  target=&quot;iarco&quot; url=&quot;../icons/arc.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iarco&quot; url=&quot;../icones/ferraarco.gif&quot; /&gt;<br>
+  target=&quot;ino&quot; url=&quot;../icons/ellipsis.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ino&quot; url=&quot;../icones/ferraelip.gif&quot; /&gt;<br>
+  target=&quot;iselecionar&quot; url=&quot;../icons/selection.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iselecionar&quot; url=&quot;../icones/selecao.gif&quot; /&gt;<br>
+  target=&quot;iopcaoglobal&quot; url=&quot;../icons/global-options.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iopcaoglobal&quot; url=&quot;../icones/opcaoglobal.gif&quot; /&gt;<br>
+  target=&quot;imetal&quot; url=&quot;../icons/metal.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;imetal&quot; url=&quot;../icones/metal.gif&quot; /&gt;<br>
+  target=&quot;imotif&quot; url=&quot;../icons/motif.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;imotif&quot; url=&quot;../icones/motif.gif&quot; /&gt;<br>
+  target=&quot;iwindows&quot; url=&quot;../icons/windows.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iwindows&quot; url=&quot;../icones/windows.gif&quot; /&gt;<br>
+  target=&quot;iimprimir&quot; url=&quot;../icons/print.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iimprimir&quot; url=&quot;../icones/IMPRIMIR.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iimprimirtabela&quot; url=&quot;../icones/IMPRIMIRTABELA.gif&quot; 
+  target=&quot;iimprimirtabela&quot; url=&quot;../icons/print-table.gif&quot; 
   /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ivisualisar&quot; url=&quot;../icones/previewimpressao.gif&quot; 
+  target=&quot;ivisualisar&quot; url=&quot;../icons/preview-print.gif&quot; 
   /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ivisualisartabela&quot; url=&quot;../icones/previewtabela.gif&quot; 
+  target=&quot;ivisualisartabela&quot; url=&quot;../icons/preview-table.gif&quot; 
   /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iajuda&quot; url=&quot;../icones/ajuda.gif&quot; /&gt;<br>
+  target=&quot;iajuda&quot; url=&quot;../icons/help.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ijhelp&quot; url=&quot;../icones/jhelp.gif&quot; /&gt;<br>
+  target=&quot;ipropagar&quot; url=&quot;../icons/propagate.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ipropagar&quot; url=&quot;../icones/propagar.gif&quot; /&gt;<br>
+  target=&quot;iexpandir&quot; url=&quot;../icons/expand-nodes.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iexpandir&quot; url=&quot;../icones/expandir.gif&quot; /&gt;<br>
+  target=&quot;icontrair&quot; url=&quot;../icons/contract-nodes.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;icontrair&quot; url=&quot;../icones/contrair.gif&quot; /&gt;<br>
+  target=&quot;ieditar&quot; url=&quot;../icons/edit.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;icopiar&quot; url=&quot;../icones/copiar.gif&quot; /&gt;<br>
+  target=&quot;ilog&quot; url=&quot;../icons/information.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;icolar&quot; url=&quot;../icones/colar.gif&quot; /&gt;<br>
+  target=&quot;itext&quot; url=&quot;../icons/text-file.gif&quot; /&gt;<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;icerteza&quot; url=&quot;../icones/certeza.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ilikelihood&quot; url=&quot;../icones/likelihood.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ieditar&quot; url=&quot;../icones/editar.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ilog&quot; url=&quot;../icones/informacao.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;itext&quot; url=&quot;../icones/text.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;ilnf&quot; url=&quot;../icones/lnf.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;irede&quot; url=&quot;../icones/net.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iarvore&quot; url=&quot;../icones/arvore.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iintroducao&quot; url=&quot;../icones/introducao.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;iacao&quot; url=&quot;../icones/acao2.gif&quot; /&gt;<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;mapID 
-  target=&quot;icomponentes&quot; url=&quot;../icones/componentes.gif&quot; /&gt;<br>
+  target=&quot;irede&quot; url=&quot;../icons/net-file.gif&quot; /&gt;<br>
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/map&gt;<br>
 </p>
