--- a/UnBBayes/help/html/selecionar.htm
+++ b/UnBBayes/help/html/selecionar.htm
@@ -7,7 +7,7 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para <b><font color="#FF0000">selecionar uma parte</font></b> da Rede Bayesiana 
 (n&oacute;s e arcos), basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-que possui este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icones/selecao.gif" width="16" height="16">, 
+que possui este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icons/selection.gif" width="16" height="16">, 
 ent&atilde;o <b><font color="#FF0000">clique</font></b> com o bot&atilde;o do 
 mouse e <b><font color="#FF0000">arraste</font></b> o mesmo para selecionar a 
 &aacute;rea que se deseja selecionar. Quando <b><font color="#FF0000">&aacute;rea 
