--- a/UnBBayes/help/html/abrirrede.htm
+++ b/UnBBayes/help/html/abrirrede.htm
@@ -7,6 +7,6 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para <b><font color="#FF0000">abrir</font></b> uma nova Rede Bayesiana de um arquivo 
 basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> que possui este 
-<b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icones/ABRIR.GIF" width="16" height="16">. 
+<b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icons/open.gif" width="16" height="16">. 
 </body>
 </html>
