--- a/UnBBayes/help/html/adicionarestado.htm
+++ b/UnBBayes/help/html/adicionarestado.htm
@@ -8,6 +8,6 @@
 <p>Para <b><font color="#FF0000">adicionar um estado</font></b> a um n&oacute; 
   da Rede Bayesiana que est&aacute; sendo editada, basta <b><font color="#FF0000">clicar 
   no n&oacute; duas vezes</font></b> e ent&atilde;o <b><font color="#FF0000">clicar 
-  no bot&atilde;o</font></b> que possui este &iacute;cone<b> <img src="../../icones/MAIS.GIF" width="16" height="16">.</b></p>
+  no bot&atilde;o</font></b> que possui este &iacute;cone<b> <img src="../../icons/more.gif" width="16" height="16">.</b></p>
 </body>
 </html>
