--- a/UnBBayes/help/html/ajuda.htm
+++ b/UnBBayes/help/html/ajuda.htm
@@ -7,6 +7,6 @@
 <body bgcolor="#FFFFFF" text="#000000">
 <p>Para entrar na <b><font color="#FF0000">ajuda</font></b> do JAVA UnBBayes, 
   basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> que possui 
-  este <b><font color="#FF0000">&iacute;cone</font></b> <b> <img src="../../icones/help.gif" width="19" height="17">.</b></p>
+  este <b><font color="#FF0000">&iacute;cone</font></b> <b> <img src="../../icons/help.gif" width="19" height="17">.</b></p>
 </body>
 </html>
