--- a/UnBBayes/help/html/contrairarvore.htm
+++ b/UnBBayes/help/html/contrairarvore.htm
@@ -8,6 +8,6 @@
 <p>Para <b><font color="#FF0000">contrair a &aacute;rvore de evid&ecirc;ncias</font></b> 
   que foi gerada a partir da compila&ccedil;&atilde;o da atual Rede Bayesiana 
   que est&aacute; sendo editada, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <b> <img src="../../icones/CONTRAIR.GIF" width="20" height="20">.</b></p>
+  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <b> <img src="../../icons/contract-nodes.gif" width="20" height="20">.</b></p>
 </body>
 </html>
