--- a/UnBBayes/help/html/edicaorede.htm
+++ b/UnBBayes/help/html/edicaorede.htm
@@ -7,6 +7,6 @@
 <body bgcolor="#FFFFFF" text="#000000">
 <p>Para voltar ao<b><font color="#FF0000"> m&oacute;dulo de edi&ccedil;&atilde;o</font></b> 
   da atual Rede Bayesiana, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <b> <img src="../../icones/Editar.gif" width="22" height="19">.</b></p>
+  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <b> <img src="../../icons/edit.gif" width="22" height="19">.</b></p>
 </body>
 </html>
