--- a/UnBBayes/help/html/imprimirtabela.htm
+++ b/UnBBayes/help/html/imprimirtabela.htm
@@ -10,6 +10,6 @@ de potencial</font></b> de um <b><font color="#FF0000">n&oacute;</font></b> da
 Rede Bayesiana, basta <b><font color="#FF0000">clicar duas vezes</font></b> no 
 <b> <font color="#FF0000">n&oacute; desejado</font></b> e <b><font color="#FF0000">clicar 
 no bot&atilde;o</font></b> que possui este <b><font color="#FF0000">&iacute;cone 
-</font></b> <img src="../../icones/IMPRIMIRTABELA.gif" width="16" height="16">. 
+</font></b> <img src="../../icons/print-table.gif" width="16" height="16">. 
 </body>
 </html>
