--- a/UnBBayes/help/html/inserirarco.htm
+++ b/UnBBayes/help/html/inserirarco.htm
@@ -7,7 +7,7 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para <b><font color="#FF0000">inserir um arco</font></b> na Rede Bayesiana atual, 
 basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> que possui este 
-<font color="#FF0000"><b>&iacute;cone </b></font> <img src="../../icones/ferraarco.gif" width="16" height="16"> 
+<font color="#FF0000"><b>&iacute;cone </b></font> <img src="../../icons/arc.gif" width="16" height="16"> 
 e clicar primeiramente no <b><font color="#FF0000">n&oacute; pai</font></b> e 
 <b> <font color="#FF0000">arrastar</font></b> o mouse at&eacute; o <b><font color="#FF0000">n&oacute; 
 filho</font></b> e por fim <b><font color="#FF0000">soltar</font></b> o bot&atilde;o 
