--- a/UnBBayes/help/html/inserirno.htm
+++ b/UnBBayes/help/html/inserirno.htm
@@ -7,7 +7,7 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para<font color="#FF0000"><b> inserir um n&oacute;</b></font> na Rede Bayesiana 
 atual, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> que possui 
-este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icones/ferraelip.gif" width="16" height="16"> 
+este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icons/ellipsis.gif" width="16" height="16"> 
 e ent&atilde;o <b><font color="#FF0000">clicar no local desejado</font></b> (dentro 
 da <b><font color="#FF0000">&aacute;rea reservada</font></b> para a edi&ccedil;&atilde;o 
 da Rede Bayesiana) . 
