--- a/UnBBayes/help/html/log.htm
+++ b/UnBBayes/help/html/log.htm
@@ -8,6 +8,6 @@
 <p>Para mostrar a<b><font color="#FF0000"> informa&ccedil;&atilde;o (log)</font></b> 
   gerada pela compila&ccedil;&atilde;o da atual Rede Bayesiana que est&aacute; 
   sendo editada, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <b> <img src="../../icones/informacao.gif" width="20" height="20">.</b></p>
+  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <b> <img src="../../icons/information.gif" width="20" height="20">.</b></p>
 </body>
 </html>
