--- a/UnBBayes/help/html/metal.htm
+++ b/UnBBayes/help/html/metal.htm
@@ -8,6 +8,6 @@
 Para setar o <b><font color="#FF0000">ambiente de interface</font></b> do programa 
 (Look-and-Feel) para o do <b><font color="#FF0000">metal (JAVA)</font></b>, basta 
 <font color="#FF0000"> <b>clicar no bot&atilde;o</b></font> que possui este <b><font color="#FF0000">&iacute;cone </font></b> 
-<img src="../../icones/metal.gif" width="17" height="16">. 
+<img src="../../icons/metal.gif" width="17" height="16">. 
 </body>
 </html>
