--- a/UnBBayes/help/html/novarede.htm
+++ b/UnBBayes/help/html/novarede.htm
@@ -7,7 +7,7 @@
 <body bgcolor="#FFFFFF" text="#000000">
 Para <b><font color="#FF0000">editar uma nova</font></b> Rede Bayesiana desde 
 o in&iacute;cio, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-que possui este <font color="#FF0000"><b>&iacute;cone </b></font> <img src="../../icones/NOVO.GIF" width="16" height="16"> 
+que possui este <font color="#FF0000"><b>&iacute;cone </b></font> <img src="../../icons/new.gif" width="16" height="16"> 
 . 
 </body>
 </html>
