--- a/UnBBayes/help/html/opcoesglobais.htm
+++ b/UnBBayes/help/html/opcoesglobais.htm
@@ -15,6 +15,6 @@
   - o tamanho da Rede;<br>
   - entre outros.</p>
 <p>basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> que possui 
-  este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icones/opcaoglobal.gif" width="17" height="16">.</p>
+  este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icons/global-options.gif" width="17" height="16">.</p>
 </body>
 </html>
