--- a/UnBBayes/help/html/propagarevidencias.htm
+++ b/UnBBayes/help/html/propagarevidencias.htm
@@ -9,6 +9,6 @@
   da &aacute;rvore que foi gerada a partir da compila&ccedil;&atilde;o da atual 
   Rede Bayesiana que est&aacute; sendo editada, basta <b><font color="#FF0000">clicar 
   no bot&atilde;o</font></b> que possui este <b><font color="#FF0000">&iacute;cone 
-  </font></b> <b> <img src="../../icones/PROPAGAR.GIF" width="20" height="20">.</b></p>
+  </font></b> <b> <img src="../../icons/propagate.gif" width="20" height="20">.</b></p>
 </body>
 </html>
