--- a/UnBBayes/help/html/salvarrede.htm
+++ b/UnBBayes/help/html/salvarrede.htm
@@ -7,6 +7,6 @@
 <body bgcolor="#FFFFFF" text="#000000">
 <p>Para <b><font color="#FF0000">salvar</font></b> a Rede Bayesiana que est&aacute; 
   sendo editada, basta <b><font color="#FF0000">clicar no bot&atilde;o</font></b> 
-  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icones/SALVAR.GIF" width="16" height="16">.</p>
+  que possui este <b><font color="#FF0000">&iacute;cone </font></b> <img src="../../icons/save.gif" width="16" height="16">.</p>
 </body>
 </html>
