--- a/UnBBayes/help/html/windows.htm
+++ b/UnBBayes/help/html/windows.htm
@@ -8,6 +8,6 @@
 Para setar o <font color="#FF0000"><b>ambiente de interface</b></font> do programa 
 (Look-and-Feel) para o do <font color="#FF0000"><b>windows</b></font>, basta <b><font color="#FF0000">clicar 
 no bot&atilde;o</font></b> que possui este <b><font color="#FF0000">&iacute;cone </font></b> 
-<img src="../../icones/windows.gif" width="18" height="16">. 
+<img src="../../icons/windows.gif" width="18" height="16">. 
 </body>
 </html>
