*** empty log message ***

--- a/UnBBayes/help/CNMHelp/HTML/CNM_Example.htm
+++ b/UnBBayes/help/CNMHelp/HTML/CNM_Example.htm
@@ -1963,7 +1963,8 @@ cellSpacing=0 cellPadding=0 border=1>
   ></O:P></SPAN></P></TD></TR></TABLE></DIV>
 <P class=MsoNormal style="TEXT-ALIGN: center" align=center><SPAN style="FONT-SIZE: 11pt; mso-bidi-font-size: 12.0pt"><FONT size=3>Combinações geradas pelo 
 algoritmo de geração por contingência.</FONT></SPAN></P>
-<P class=MsoNormal style="TEXT-ALIGN: left" align=left><SPAN style="FONT-SIZE: 11pt; mso-bidi-font-size: 12.0pt"></SPAN>Com as otimizações utilizadas neste modelo com 
+<P class=MsoNormal style="TEXT-ALIGN: left" align=left><SPAN 
+style="FONT-SIZE: 11pt; mso-bidi-font-size: 12.0pt"></SPAN>Com as otimizações utilizadas neste modelo com 
 relação ao uso de memória, foram criados apenas 14 neurônios na camada 
 combinatória, com vários deles se ligando duas hipóteses de saída. E após a poda 
 com os mesmos pontos de corte usados anteriormente, um e dois, também sobraram 
