--- a/UnBBayes/help/CNMHelp/HTML/FirstTopic.htm
+++ b/UnBBayes/help/CNMHelp/HTML/FirstTopic.htm
@@ -67,8 +67,8 @@ Então&nbsp;<I>y<SUB>1</SUB></I>”.<SPAN style="COLOR: red"><o:p></O:P></SPAN></FO
 <P class=MsoFooter style="MARGIN-TOP: 0cm; tab-stops: 35.4pt"><SPAN 
 style="mso-bidi-font-size: 12.0pt"><FONT color=#000000>&nbsp;<SPAN 
 style="FONT-SIZE: 12pt; FONT-FAMILY: 'Times New Roman'; mso-fareast-font-family: 'Times New Roman'; mso-ansi-language: PT-BR; mso-fareast-language: PT-BR; mso-bidi-language: AR-SA"><V:SHAPETYPE id="_x0000_t75" 
-stroked="f" filled="f" path="m@4@5l@4@11@9@11@9@5xe" o:preferrelative="t" 
-o:spt="75" coordsize="21600,21600"> <v:stroke 
+coordsize="21600,21600" o:spt="75" o:preferrelative="t" path="m@4@5l@4@11@9@11@9@5xe" 
+filled="f" stroked="f"> <v:stroke 
 joinstyle="miter"></V:STROKE><v:formulas><v:f 
 eqn="if lineDrawn pixelLineWidth 0"></V:F><v:f eqn="sum @0 1 0"></V:F><v:f 
 eqn="sum 0 0 @1"></V:F><v:f eqn="prod @2 1 2"></V:F><v:f 
@@ -76,13 +76,12 @@ eqn="prod @3 21600 pixelWidth"></V:F><v:f
 eqn="prod @3 21600 pixelHeight"></V:F><v:f eqn="sum @0 0 1"></V:F><v:f 
 eqn="prod @6 1 2"></V:F><v:f eqn="prod @7 21600 pixelWidth"></V:F><v:f 
 eqn="sum @8 21600 0"></V:F><v:f eqn="prod @7 21600 pixelHeight"></V:F><v:f 
-eqn="sum @10 21600 0"></V:F></V:FORMULAS><v:path o:connecttype="rect" 
-gradientshapeok="t" o:extrusionok="f"></V:PATH><o:lock aspectratio="t" 
-v:ext="edit"></O:LOCK></V:SHAPETYPE></SPAN><o:p></O:P></FONT></SPAN></P>
-<P class=MsoNormal style="TEXT-ALIGN: center" align=center><FONT color=#000000></FONT>&nbsp;</P>
-<P class=MsoCaption><A name=_Toc37226416><FONT color=#000000>Figura <SPAN 
-style="mso-field-code: 'STYLEREF 1 \\s'">2</SPAN>.<SPAN 
-style="mso-field-code: 'SEQ Figura \\* ARABIC \\s 1'">2</SPAN> – Topologia de três camadas do CNM.</FONT>    
+eqn="sum @10 21600 0"></V:F></V:FORMULAS><v:path o:extrusionok="f" 
+gradientshapeok="t" o:connecttype="rect"></V:PATH><o:lock v:ext="edit" 
+aspectratio="t"></O:LOCK></V:SHAPETYPE></SPAN><o:p></O:P></FONT></SPAN></P>
+<P class=MsoNormal style="TEXT-ALIGN: center" align=center><FONT color=#000000><IMG height=406 
+hspace=0 src="../Images/topologia.JPG" width=544 border=0></FONT></P>
+<P class=MsoCaption align=center><A name=_Toc37226416><FONT color=#000000>  Topologia de três camadas do CNM.</FONT>    
    </A></P>
 <P class=MsoNormal style="TEXT-ALIGN: center" align=center><SPAN 
 style="FONT-SIZE: 11pt; mso-bidi-font-size: 12.0pt"><FONT color=#000000>Fonte [MAC 
