--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -26,7 +26,7 @@ Cleuber Moreira Fernandes <br />
 
 <p>
 Danilo Custódio da Silva (danilocustodio@gmail.com) <br />
-- Learning Bayesian Network: K2, B, and V <br />
+- Bayesian Network Learning: K2, B, and V <br />
 - Incremental Learning
 </p>
 
@@ -63,15 +63,10 @@ Mário Henrique Paes Vieira  <br />
 </p>
 
 <p>
-Prof. Dr. Marcelo Ladeira (mladeira@unb.br)  <br />
-- Coordination of the project
-</p>
-
-<p>
 Michael Shigeki Onishi (mso@gmail.com)  <br />
-- Bayesians Networks <br />
+- Bayesian Networks <br />
 - Influence Diagrams <br />
-- Multiple Sectioned Bayesian Network <br />
+- Multiply Sectioned Bayesian Network <br />
 - XML format and UnBBayes Server (J2EE) <br />
 </p>
 
@@ -82,9 +77,9 @@ Prof. Dr. Paulo C. Costa (pcosta@gmu.edu)  <br />
 
 <p>
 Rommel Novaes Carvalho (rommel.carvalho@gmail.com)  <br />
-- Bayesians Networks <br />
+- Bayesian Networks <br />
 - Influence Diagrams <br />
-- Multiple Sectioned Bayesian Network <br />
+- Multiply Sectioned Bayesian Network <br />
 - XML format and UnBBayes Server (J2EE) <br />
 - MEBN/PR-OWL implementation <br />
 </p> 
@@ -97,7 +92,7 @@ Shou Matsumoto (cardialfly@gmail.com)  <br />
 
 <p>
 Prof. Dr. Wagner Teixeira da Silva  <br />
-- Consultant in bayesian network learning
+- Consultant in Bayesian Network Learning
 </p>
 
 </font>
