--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -87,7 +87,8 @@ Rommel Novaes Carvalho (rommel.carvalho@gmail.com)  <br />
 <p>
 Shou Matsumoto (cardialfly@gmail.com)  <br />
 - MEBN/PR-OWL implementation <br />
-- Human Identification Metaphor
+- Human Identification Metaphor <br />
+- Object Oriented Bayesian Network
 </p>
 
 <p>
