Files updated for release 3.49.6.

--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -3,12 +3,17 @@
 <head>
 <meta http-equiv="Content-Language" content="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Testando</title>
+<title>UnBBayes Team History</title>
 </head>
 
 <body>
 
 <font SIZE="3" COLOR="#2a00ff">
+<p>
+Aditya Mugali (amugali@gmu.edu) <br />
+- Progress Bar with Thread
+</p>
+
 <p>
 Alberto Magno Muniz Soares <br />
 - Initial version in Delphi 5.0
@@ -43,6 +48,17 @@ Gabriel M. N. Guimarães <br />
 <p>
 Francisco José Fiuza Lima Jr  <br />
 - Medical Metaphor GUI
+</p>
+
+<p>
+Kathryn B. Laskey (klaskey@gmu.edu)  <br />
+- Consultant in probabilistic networks, MEBN, and PR-OWL
+</p>
+
+<p>
+Kuo-Chu Chang (kchang@gmu.edu)  <br />
+- Consultant in probabilistic networks <br />
+  and classification performance evaluation
 </p>
 
 <p>
@@ -82,6 +98,10 @@ Rommel Novaes Carvalho (rommel.carvalho@gmail.com)  <br />
 - Multiply Sectioned Bayesian Network <br />
 - XML format and UnBBayes Server (J2EE) <br />
 - MEBN/PR-OWL implementation <br />
+- Correct Classification Evaluation <br />
+- Sampling (Logic, Likelihood, and Gibbs) <br />
+- Approximate Inference (Likelihood and Gibbs) <br />
+- Hybrid Bayesian Networks (Gaussian Mixture) <br />
 </p> 
 
 <p>
@@ -94,6 +114,11 @@ Shou Matsumoto (cardialfly@gmail.com)  <br />
 <p>
 Prof. Dr. Wagner Teixeira da Silva  <br />
 - Consultant in Bayesian Network Learning
+</p>
+
+<p>
+Young Park (cparkf@gmu.edu) <br />
+- Improve GUI implementation
 </p>
 
 </font>
