Finishing major refactories to support IO for plugins, including file conflict treatment. Fixed the fact that config.cfg was not being updated when choosing Exit on menu.

--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -108,7 +108,8 @@ Rommel Novaes Carvalho (rommel.carvalho@gmail.com)  <br />
 Shou Matsumoto (cardialfly@gmail.com)  <br />
 - MEBN/PR-OWL implementation <br />
 - Human Identification Metaphor <br />
-- Object Oriented Bayesian Network
+- Object Oriented Bayesian Network <br />
+- Plugin support
 </p>
 
 <p>
