--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -109,7 +109,9 @@ Shou Matsumoto (cardialfly@gmail.com)  <br />
 - MEBN/PR-OWL implementation <br />
 - Human Identification Metaphor <br />
 - Object Oriented Bayesian Network <br />
-- Plugin support
+- Plug-in support <br />
+- Probabilistic Relational Model <br />
+- Integration with Protege editor <br />
 </p>
 
 <p>
