Changing version number and release notes for next release.

--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -112,6 +112,8 @@ Shou Matsumoto (cardialfly@gmail.com)  <br />
 - Plug-in support <br />
 - Probabilistic Relational Model <br />
 - Integration with Protege editor <br />
+- PR-OWL 2 <br />
+- Soft evidences <br />
 </p>
 
 <p>
