Changed occurrences of evidences to evidence, because it is supposedly a mass noum.

--- a/UnBBayes/src/main/resources/html/Colaborators.html
+++ b/UnBBayes/src/main/resources/html/Colaborators.html
@@ -113,7 +113,7 @@ Shou Matsumoto (cardialfly@gmail.com)  <br />
 - Probabilistic Relational Model <br />
 - Integration with Protege editor <br />
 - PR-OWL 2 <br />
-- Soft evidences <br />
+- Soft evidence <br />
 </p>
 
 <p>
